--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Roll no</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Aakash M</td>
+				<td>001</td>
+			</tr>
+			<tr>
+				<td>Rakesh</td>
+				<td>020</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
